Changelog
=========


1.1.3 - Unreleased
------------------

- Optimize images and icon file sizes.
  [hannosch]

- Updated base_properties values with new sunburst theme css values.
  [thomasdesvenain]

- Removed clear:both on .image-left and .image-right rules.
  [vincentfretin]

- Add MANIFEST.in.
  [WouterVH]


1.1.2 - 2011-03-02
------------------

- Make text input fields have a default width of 20em when no size is set.
  [elro]

- Hide plone.app.discussion comment viewlet from print.
  [timo]


1.1.1 - 2011-02-10
------------------

- Renamed options box in IEFixes for keyword multiple select enhancement PLIP.
  Refs http://dev.plone.org/plone/ticket/11017.
  [rmattb]


1.1 - 2011-02-04
----------------

- Merge PLIP 11017: Tags MultiSelectionWidget w/scrollbar & checkboxes.
  [esteele]


1.0.6 - 2011-01-18
------------------

- Adjust the new setuphandler introduced in 1.0.5 to avoid using copy/paste,
  which introduced unwanted additional security checks. 
  [hannosch]

- Tightened selector for error fields to avoid z3cform inner div.error.
  [elro]

- Added styling for z3cform title and description fields.
  [elro]


1.0.5 - 2011-01-04
------------------

- Added iframe to style reset.
  [elro]

- Added ajax_include_head request parameter for use with cross domain iframe.
  [elro]

- Copy the plone_setup action to the user action category via a custom
  setuphandler rather than in actions.xml, so that we don't have to hardcode
  the various action settings here.  This provides forward compatibility with
  Plone 4.1, where the URL and permission change.
  [davisagli]

- Fixed content views list shift under ie6.
  This fixes http://dev.plone.org/plone/ticket/11280.
  [thomasdesvenain]


1.0.4 - 2010-11-15
------------------

- Restore more of the table.listing (Fancy listing) CSS. Refs #10331.
  [rossp]


1.0.3 - 2010-09-09
------------------

- Removed padding from navigation portlet header when it is hidden, so we won't